# Stronghold

./: .gitignore  COPYRIGHT.txt  Cargo.toml  README.md  appsettings.example.json  package.json
assets/: INSTALLER.md
config/: config.json
logs/: scan_history.jsonl  scan_summary.jsonl
ml/: anomaly_detector.py
sample_data/: threat_logs.csv  threat_logs.json
scripts/: build-installer.ps1
src/: app.rs  config.rs  engine.rs  i18n.rs  logger.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: behavior.rs  config.rs  db.rs  human_risk.rs  main.rs  models.rs  network.rs  response.rs  scanner.rs  version.rs
src/modules/: ai.rs  behavior.rs  human_risk.rs  integrity.rs  kernel.rs  mod.rs  network.rs  response.rs
ui/: app.js  index.html  styles.css
