[package]
name = "stronghold"
version = "26.1.1"
edition = "2021"
authors = ["Stronghold Team"]
description = "Native Rust desktop security workstation"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.31"
egui = "0.31"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
